test/errors/type/str/startswith3.yasl
mt.lookup('', .startswith)(.str, true)
